tests/netconvert/import/XML/errors/xml_false_type/options.netconvert
--edge-files=input_edges.edg.xml --node-files=input_nodes.nod.xml --output=net.net.xml
--type-files invalid.typ.xml
